[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golioth"
version = "0.1.0"
authors = [
    { name="Marcin Niestroj", email="m.niestroj@emb.dev" }
]
description = "Golioth client Python library"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anyio",
    "httpx",
    "pyyaml",
    "trio",
    "trio-websocket",
]

[project.utils]
"Homepage" = "https://github.com/golioth/golioth-zephyr-sdk"
"Bug Tracker" = "https://github.com/golioth/golioth-zephyr-sdk/issues"
