[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golioth"
version = "0.5.0"
authors = [
    { name="Marcin Niestroj", email="m.niestroj@emb.dev" },
    { name="Sam Friedman", email="sam@golioth.io" }
]
description = "Golioth client Python library"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]
dependencies = [
    "anyio",
    "asyncclick",
    "colorama",
    "httpx",
    "imgtool",
    "pyyaml",
    "rich",
    "trio",
    "trio-websocket",
]

[project.scripts]
golioth = "golioth.cli:main"

[project.utils]
"Homepage" = "https://github.com/golioth/python-golioth-tools"
"Bug Tracker" = "https://github.com/golioth/python-golioth-tools/issues"

[project.entry-points.pytest11]
golioth = "golioth.pytest_plugin"
